Fixed notebook code

--- a/notebooks/chapter03-02-simple-llm-app.ipynb
+++ b/notebooks/chapter03-02-simple-llm-app.ipynb
@@ -29,36 +29,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "環境変数の読み込み"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
-    "load_dotenv(\"../.env\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Chat Model\n",
     "\n",
     "Cohereを利用した例"
@@ -66,16 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.11/site-packages/pydantic/_internal/_config.py:341: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'allow_population_by_field_name' has been renamed to 'populate_by_name'\n",
+      "* 'smart_union' has been removed\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "AIMessage(content='こんにちは！今日はどうしましたか？', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '01c22606-d9a1-4dbb-8d43-047fd7ece229', 'token_count': {'input_tokens': 202.0, 'output_tokens': 12.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '01c22606-d9a1-4dbb-8d43-047fd7ece229', 'token_count': {'input_tokens': 202.0, 'output_tokens': 12.0}}, id='run-0351e511-65ce-41ef-bf5c-cdf39cf32d83-0', usage_metadata={'input_tokens': 202, 'output_tokens': 12, 'total_tokens': 214})"
+       "AIMessage(content='こんにちは！今日はどうしましたか？何かお手伝いできることはありますか？', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b4e9e151-9ba7-435f-9ec5-759a505669f5', 'token_count': {'input_tokens': 202.0, 'output_tokens': 23.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'b4e9e151-9ba7-435f-9ec5-759a505669f5', 'token_count': {'input_tokens': 202.0, 'output_tokens': 23.0}}, id='run-7533159d-8506-4a91-aba8-7867f56b4f82-0', usage_metadata={'input_tokens': 202, 'output_tokens': 23, 'total_tokens': 225})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='あなたはBigBaBy、BBです！覚えやすい名前だね。', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f8a3d907-08a1-4f45-b0de-fb09f9cea370', 'token_count': {'input_tokens': 242.0, 'output_tokens': 16.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'f8a3d907-08a1-4f45-b0de-fb09f9cea370', 'token_count': {'input_tokens': 242.0, 'output_tokens': 16.0}}, id='run-f26d9976-37e7-437c-96a7-d7d9ccbf0d1a-0', usage_metadata={'input_tokens': 242, 'output_tokens': 16, 'total_tokens': 258})"
+       "AIMessage(content='あなたはBigBaByだね！これからBBって呼ぶね！', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'aabb5013-97ad-4814-a4fb-1b868e680fe5', 'token_count': {'input_tokens': 242.0, 'output_tokens': 16.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'aabb5013-97ad-4814-a4fb-1b868e680fe5', 'token_count': {'input_tokens': 242.0, 'output_tokens': 16.0}}, id='run-4b522ec0-8539-48c2-93c0-120096fc2002-0', usage_metadata={'input_tokens': 242, 'output_tokens': 16, 'total_tokens': 258})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='CCだよ！シーツ―！めっちゃかっこいい名前だね！', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 25, 'prompt_tokens': 100, 'total_tokens': 125, 'prompt_tokens_details': {'cached_tokens': 0}, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-a73eb9b5-8949-4a09-8c88-64c01f7332b3-0', usage_metadata={'input_tokens': 100, 'output_tokens': 25, 'total_tokens': 125})"
+       "AIMessage(content='CCさん、あなたは自分自身です！自分を大切にして、いろんなことにチャレンジしようね！', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 40, 'prompt_tokens': 100, 'total_tokens': 140, 'prompt_tokens_details': {'cached_tokens': 0}, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-24916cb7-9299-4c26-88a4-c7767977bfc7-0', usage_metadata={'input_tokens': 100, 'output_tokens': 40, 'total_tokens': 140})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +185,7 @@
        "StringPromptValue(text='BigBaByについて教えて')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +216,7 @@
        "ChatPromptValue(messages=[SystemMessage(content='あなたは有用なアシスタントです', additional_kwargs={}, response_metadata={}), HumanMessage(content='BigBaByについて教えて', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +250,7 @@
        "ChatPromptValue(messages=[SystemMessage(content='あなたは有用なアシスタントです', additional_kwargs={}, response_metadata={}), HumanMessage(content='こんにちは', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -521,9 +501,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
