--- a/notebooks/chapter03-04-simple-llm-app-with-agent.ipynb
+++ b/notebooks/chapter03-04-simple-llm-app-with-agent.ipynb
@@ -26,59 +26,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "環境変数の読み込み"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv(\"../.env\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
+      "/opt/conda/lib/python3.11/site-packages/pydantic/_internal/_config.py:341: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'allow_population_by_field_name' has been renamed to 'populate_by_name'\n",
+      "* 'smart_union' has been removed\n",
+      "  warnings.warn(message, UserWarning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'source': 'https://docs.smith.langchain.com/overview', 'title': 'Get started with LangSmith | 🦜️🛠️ LangSmith', 'description': 'LangSmith is a platform for building production-grade LLM applications. It allows you to closely monitor and evaluate your application, so you can ship quickly and with confidence. Use of LangChain is not necessary - LangSmith works on its own!', 'language': 'en'}, page_content='\"revision_id\": \"beta\"    },)import { Client, Run, Example } from \"langsmith\";import { evaluate } from \"langsmith/evaluation\";import { EvaluationResult } from \"langsmith/evaluation\";const client = new Client();// Define dataset: these are your test casesconst datasetName = \"Sample Dataset\";const dataset = await client.createDataset(datasetName, {  description: \"A sample dataset in LangSmith.\",});await client.createExamples({  inputs: [    { postfix: \"to LangSmith\" },    { postfix: \"to Evaluations in LangSmith\" },  ],  outputs: [    { output: \"Welcome to LangSmith\" },    { output: \"Welcome to Evaluations in LangSmith\" },  ],  datasetId: dataset.id,});// Define your evaluatorconst exactMatch = async (  run: Run,  example: Example): Promise<EvaluationResult> => {  return {    key: \"exact_match\",    score: run.outputs?.output === example?.outputs?.output,  };};await evaluate(  (input: { postfix: string }) => ({ output: `Welcome ${input.postfix}` }),  {    data: datasetName,    evaluators:')"
+       "Document(metadata={'source': 'https://docs.smith.langchain.com/overview', 'title': 'Get started with LangSmith | 🦜️🛠️ LangSmith', 'description': 'LangSmith is a platform for building production-grade LLM applications. It allows you to closely monitor and evaluate your application, so you can ship quickly and with confidence. Use of LangChain is not necessary - LangSmith works on its own!', 'language': 'en'}, page_content='grade over  evaluators=[exact_match], # The evaluators to score the results  experiment_prefix=\"sample-experiment\", # The name of the experiment  metadata={    \"version\": \"1.0.0\",    \"revision_id\": \"beta\"  },)import { Client, Run, Example } from \"langsmith\";import { evaluate } from \"langsmith/evaluation\";import { EvaluationResult } from \"langsmith/evaluation\";const client = new Client();// Define dataset: these are your test casesconst datasetName = \"Sample Dataset\";const dataset = await client.createDataset(datasetName, {  description: \"A sample dataset in LangSmith.\",});await client.createExamples({  inputs: [    { postfix: \"to LangSmith\" },    { postfix: \"to Evaluations in LangSmith\" },  ],  outputs: [    { output: \"Welcome to LangSmith\" },    { output: \"Welcome to Evaluations in LangSmith\" },  ],  datasetId: dataset.id,});// Define your evaluatorconst exactMatch = async (  run: Run,  example: Example): Promise<EvaluationResult> => {  return {    key: \"exact_match\",    score:')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain_cohere import CohereEmbeddings\n",
@@ -104,14 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name='combat_power' description='曜日に対応するBigBaByの戦闘力を計算します。\\n\\nArgs:\\n  day: 曜日です。' args_schema=<class 'langchain_core.utils.pydantic.combat_power'> func=<function combat_power at 0x7f9ad8cab240>\n"
+      "combat_power\n",
+      "曜日に対応するBigBaByの戦闘力を計算します。\n",
+      "\n",
+      "Args:\n",
+      "  day: 曜日です。\n",
+      "{'day': {'$ref': '#/$defs/DayOfWeek'}}\n",
+      "name='combat_power' description='曜日に対応するBigBaByの戦闘力を計算します。\\n\\nArgs:\\n  day: 曜日です。' args_schema=<class 'langchain_core.utils.pydantic.combat_power'> func=<function combat_power at 0x795a0c9bbba0>\n"
      ]
     }
    ],
@@ -158,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[StructuredTool(name='combat_power', description='曜日に対応するBigBaByの戦闘力を計算します。\\n\\nArgs:\\n  day: 曜日です。', args_schema=<class 'langchain_core.utils.pydantic.combat_power'>, func=<function combat_power at 0x7f9ad8898540>)]"
+       "[StructuredTool(name='combat_power', description='曜日に対応するBigBaByの戦闘力を計算します。\\n\\nArgs:\\n  day: 曜日です。', args_schema=<class 'langchain_core.utils.pydantic.combat_power'>, func=<function combat_power at 0x795a0c9bbba0>)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,15 +190,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ContentString: I will use the provided function to find out the combat power on the day after Monday, which will allow me to answer the question in full.\n",
-      "ToolCalls: [{'name': 'combat_power', 'args': {'day': 'Monday'}, 'id': '373722c85d974a38acfd3e3cb754e17f', 'type': 'tool_call'}]\n"
+      "ContentString: I will use the provided function to find out the combat power for the day after Monday, and relay this information to the user.\n",
+      "ToolCalls: [{'name': 'combat_power', 'args': {'day': 'Monday'}, 'id': '404b21b856f74d4ea834783268eac228', 'type': 'tool_call'}]\n"
      ]
     }
    ],
@@ -230,21 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='BigBaByの木曜の戦闘力は？', additional_kwargs={}, response_metadata={}, id='3072873c-ce02-45e3-b6e2-7250bc7d565c'),\n",
-       " AIMessage(content='I will use the provided function to find out the combat power corresponding to Thursday, and relay this information to the user.', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'e1598148-553f-4a85-bc88-8b5d0bf6fb75', 'tool_calls': [{'id': '9b06278491d44673802b26a52155bf37', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 925.0, 'output_tokens': 66.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': 'e1598148-553f-4a85-bc88-8b5d0bf6fb75', 'tool_calls': [{'id': '9b06278491d44673802b26a52155bf37', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 925.0, 'output_tokens': 66.0}}, id='run-eace4578-4a36-4031-9c59-a8c929646862-0', tool_calls=[{'name': 'combat_power', 'args': {'day': 'Thursday'}, 'id': '2c240667b8f74e57af0025cce91dda61', 'type': 'tool_call'}], usage_metadata={'input_tokens': 925, 'output_tokens': 66, 'total_tokens': 991}),\n",
-       " ToolMessage(content=\"Error: 1 validation error for combat_power\\nday\\n  Input should be 'Monday!', 'Tuesday!', 'Wednesday!', 'Thursday!', 'Friday!', 'Saturday!' or 'Sunday!' [type=enum, input_value='Thursday', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.8/v/enum\\n Please fix your mistakes.\", name='combat_power', id='112cb7d2-b148-4b5c-a54c-8b5a18f1748e', tool_call_id='2c240667b8f74e57af0025cce91dda61'),\n",
-       " AIMessage(content='The input must be in the form of an exclamation mark ending sentence. I will run the function again with the corrected input.', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '2267ab14-7b0a-45b7-8bdf-aa2b9e830ba6', 'tool_calls': [{'id': '34648f8267ca4a92b7254251aa67397f', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday!\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 1103.0, 'output_tokens': 68.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '2267ab14-7b0a-45b7-8bdf-aa2b9e830ba6', 'tool_calls': [{'id': '34648f8267ca4a92b7254251aa67397f', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday!\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 1103.0, 'output_tokens': 68.0}}, id='run-4baef92b-bf76-429e-b7ab-039df5f4b48d-0', tool_calls=[{'name': 'combat_power', 'args': {'day': 'Thursday!'}, 'id': 'dc931b0b7a9c47a6a6581e534eea545b', 'type': 'tool_call'}], usage_metadata={'input_tokens': 1103, 'output_tokens': 68, 'total_tokens': 1171}),\n",
-       " ToolMessage(content='30', name='combat_power', id='c2cc9ac9-13fd-4609-8bd6-577dadcfb3ef', tool_call_id='dc931b0b7a9c47a6a6581e534eea545b'),\n",
-       " AIMessage(content=\"BigBaBy's combat power on Thursdays is **30**.\", additional_kwargs={'documents': [{'id': 'combat_power:0:5:0', 'output': '30', 'tool_name': 'combat_power'}], 'citations': [ChatCitation(start=40, end=43, text='*30', document_ids=['combat_power:0:5:0'])], 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '933400d7-27c6-45ce-9414-2e36056f2abe', 'token_count': {'input_tokens': 1203.0, 'output_tokens': 60.0}}, response_metadata={'documents': [{'id': 'combat_power:0:5:0', 'output': '30', 'tool_name': 'combat_power'}], 'citations': [ChatCitation(start=40, end=43, text='*30', document_ids=['combat_power:0:5:0'])], 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '933400d7-27c6-45ce-9414-2e36056f2abe', 'token_count': {'input_tokens': 1203.0, 'output_tokens': 60.0}}, id='run-e85bf826-a41c-4d9d-a88c-af7888657b9d-0', usage_metadata={'input_tokens': 1203, 'output_tokens': 60, 'total_tokens': 1263})]"
+       "[HumanMessage(content='BigBaByの木曜の戦闘力は？', additional_kwargs={}, response_metadata={}, id='30824695-7463-47f9-9f07-243c3766cc09'),\n",
+       " AIMessage(content='I will use the provided function to find out the combat power for Thursday and relay this information to the user.', additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '5b6041ef-4f5f-4ffe-a1af-12733d37f484', 'tool_calls': [{'id': '2544a0e9c046432286ea32162c62832c', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 925.0, 'output_tokens': 64.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '5b6041ef-4f5f-4ffe-a1af-12733d37f484', 'tool_calls': [{'id': '2544a0e9c046432286ea32162c62832c', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 925.0, 'output_tokens': 64.0}}, id='run-dd63891a-5f13-4280-b4fa-a318c8a01f68-0', tool_calls=[{'name': 'combat_power', 'args': {'day': 'Thursday'}, 'id': 'cdb21c9fdf9d4b6e943540734d97c59a', 'type': 'tool_call'}], usage_metadata={'input_tokens': 925, 'output_tokens': 64, 'total_tokens': 989}),\n",
+       " ToolMessage(content=\"Error: 1 validation error for combat_power\\nday\\n  Input should be 'Monday!', 'Tuesday!', 'Wednesday!', 'Thursday!', 'Friday!', 'Saturday!' or 'Sunday!' [type=enum, input_value='Thursday', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.8/v/enum\\n Please fix your mistakes.\", name='combat_power', id='3cc00271-c55c-400d-af6e-e44319734539', tool_call_id='cdb21c9fdf9d4b6e943540734d97c59a'),\n",
+       " AIMessage(content=\"The input for the function must be in the form of an exclamation mark ending e.g. 'Thursday!'. I will now re-input the function with the correct formatting.\", additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '53457825-39f2-426f-9a3f-3bd06e040edf', 'tool_calls': [{'id': 'a6edc915357345f39f91bf3317c894dc', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday!\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 1101.0, 'output_tokens': 79.0}}, response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '53457825-39f2-426f-9a3f-3bd06e040edf', 'tool_calls': [{'id': 'a6edc915357345f39f91bf3317c894dc', 'function': {'name': 'combat_power', 'arguments': '{\"day\": \"Thursday!\"}'}, 'type': 'function'}], 'token_count': {'input_tokens': 1101.0, 'output_tokens': 79.0}}, id='run-1ed6ee4c-c1be-4d93-a0a6-f6bb6728da3b-0', tool_calls=[{'name': 'combat_power', 'args': {'day': 'Thursday!'}, 'id': 'e723b4969ef94c70ba4180bb69c3dd07', 'type': 'tool_call'}], usage_metadata={'input_tokens': 1101, 'output_tokens': 79, 'total_tokens': 1180}),\n",
+       " ToolMessage(content='30', name='combat_power', id='83f107ee-fe0a-44fc-96c2-42fb4d935319', tool_call_id='e723b4969ef94c70ba4180bb69c3dd07'),\n",
+       " AIMessage(content='The combat power for Thursday is **30**.', additional_kwargs={'documents': [{'id': 'combat_power:0:5:0', 'output': '30', 'tool_name': 'combat_power'}], 'citations': [ChatCitation(start=34, end=37, text='*30', document_ids=['combat_power:0:5:0'])], 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '563b0ea8-e163-443e-9572-510164b1bb79', 'token_count': {'input_tokens': 1212.0, 'output_tokens': 54.0}}, response_metadata={'documents': [{'id': 'combat_power:0:5:0', 'output': '30', 'tool_name': 'combat_power'}], 'citations': [ChatCitation(start=34, end=37, text='*30', document_ids=['combat_power:0:5:0'])], 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '563b0ea8-e163-443e-9572-510164b1bb79', 'token_count': {'input_tokens': 1212.0, 'output_tokens': 54.0}}, id='run-268acb6f-f85f-4b42-af93-f115442f259f-0', usage_metadata={'input_tokens': 1212, 'output_tokens': 54, 'total_tokens': 1266})]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -286,9 +266,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
