--- a/notebooks/chapter05-05-langfuse-metrics-api.ipynb
+++ b/notebooks/chapter05-05-langfuse-metrics-api.ipynb
@@ -41,9 +41,9 @@
     "# おまじない\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "endpoint = \"http://langfuse-server:3000\"\n",
-    "public_key = os.getenv(\"PUBLIC_KEY\")\n",
-    "secret_key = os.getenv(\"SECRET_KEY\")"
+    "endpoint = os.getenv(\"LANGFUSE_HOST\")\n",
+    "public_key = os.getenv(\"LANGFUSE_PUBLIC_KEY\")\n",
+    "secret_key = os.getenv(\"LANGFUSE_SECRET_KEY\")"
    ]
   },
   {
@@ -84,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
